--- a/final_report/sections/fall_weekly_blogs.tex
+++ b/final_report/sections/fall_weekly_blogs.tex
@@ -3,12 +3,60 @@
 \begin{document}
 \subsection{Fall}
 \subsubsection{Week 3}
+\textbf{Shannon Ernst}\\ 
+This week I wrote the problem statement for our client. This statement outlined the markers of success for the project. After three iterations, the client signed the statement with glee and the statement has been submitted to the class instructors. The primary issues with the problem statement were: the language around funding was not accurately reflecting the nature of funding for the client, the word choice was too technical or ambiguous for our client, and some markers of success were not included on the first draft. All of these issues were resolved with haste. We now have a couple different ways of contacting our client to help keep the dialogue open. The client is very excited about the work we have done so far. Next we, as a team sans client, will be sitting down to come up with more of the particulars in regards to implementation. The client has requested we model our project after services provided by Qualtrics. We will be examining Qualtrics this week to examine the benefits and short falls of that program to see how we can improve implementation for our project. Design is paramount in the coming weeks.\\ \\
+\textbf{Kyle Nichols}\\ 
+Since it is still early in the process, we have only recently met with our clients a week ago and written out what exactly our problem is. Now it is time for us to sit down more thoroughly as a group and figure out exactly how we will solve the problem.\\
+
+The three of us talked about the project as a group before we met with our clients, but next week we will meet again to design out a more complete solution as well as do the research necessary to better design our solution and better implement that design.\\
+
+\textbf{Javier Franco} \\ 
+The plans that I have for the upcoming week is that I am going to try to get familiar with how to use Qualtrics and I am planning to attend a training session on the 27th of this month. The reason why I am going to learn Qualtrics is incase our client wants to build a similar tool or wants to incorporate it and the only person in our group that knows how to use Qualtrics is Shannon. I am also going to attend a meeting that we are planning to setup with our client in order to discuss a design that will solve their problem. The progress that we made is that we were able to get the clients approval for our problem statement and we have setup a GitHub account with a weekly updates page. I do not think we encountered any problems, but I feel we will start encountering problems once to start designing a solution for the problem.\\
 \subsubsection{Week 4}
+\textbf{Shannon Ernst} \\
+This week focused on researching solutions to the problem. We examined Qualtrics a bit closer. It has a great survey generation system but it isn't incredibly intuitive to use. It's major strength is the data visualization widgets. These are not a high priority for our client though who would prefer the raw data. Finally there is no good way to generate reports in Qualtrics which is really what our client needs. Our next step is to begin the requirements paperwork. An intermediate step to this is contacting OSU Central Networking Services to see if the STEM Academy has access to a public html and database. Our group believes this would be the best route for setting up the website and database service as it will not disappear any time soon and hopefully will not cost much, if anything. \\ \\
+\textbf{Kyle Nichols}\\ 
+This week I did a little bit of research about Qualtrics, due to its similarity to what we will be working on, and analyzed features about it that might be useful to us.\\
+Structurally, Qualtrics has many features, most of which will not be useful to our clients. Our goal will be to create a pared-down software accomplishing our clients' needs and cutting the things that a commercial software will have that they don't need. These will be hammered out in detail in our requirements document, but for example, Qualtrics has several tools for testing surveys that is just not necessary for our purposes. We will also not need the visualization tools, only reports with summary data.\\
+One particular feature I noticed is Qualtrics' library of template questions. Ours would not need to be so extensive, but one thing our clients did bring up was how similar many of their questions are. We could develop a similar set of template questions that they could load for their surveys and then edit to change vocabulary necessary for that specific survey.\\ \\
+\textbf{Javier Franco}\\ 
+This week we analyzed Qualtrics and some of our group members including myself used it for the first time. I thought Qualtrics was not user friendly because it took me a while to figure out how to create a new page of questions and also how to delete any additions that I made to a question. There were somethings that Qualtrics has that we are not going to incorporate in our project which includes widgets for queries, images, and visual diagrams of reports since our clients do not need these things. Our plan for the upcoming week is to finish our requirements document early, so that we can get timely feedback from our client to make any necessary changes in order to get their approval. In addition, we will be fixing our problem statement by using the feedback that we got from our instructor. This week we did not face any problems.\\
 \subsubsection{Week 5}
+\textbf{Shannon Ernst}\\
+This week this focus was on updating the problem statement, working on the requirements document and gathering signatures. Last Friday, the group met to set up an outline for the requirements document. We established a list of functional requirements. Upon digging deeper into the IEEE formatting we began to get confused as to what we should be including in the document as well as if our formatting was correct. We had arranged to meet with our client on Wednesday to obtain signatures for both the updated problem statement and the requirements document. On Tuesday I had finished up edits to the problem statement and written the requirements section of the requirements document. Kyle picked up later and did the introduction. From this week, I learned that we need to plan and communicate better as a team. Next week, we will be updated the requirements document and working on the technical review. \\ \\
+\textbf{Kyle Nichols}\\ 
+This was a slower week, but time was still used to work on the requirements document. I added several of the requirements we discussed last week to the document and later revised the requirements document to add more requirements to fit several of the IEEE formatting sections. There were still some sections I didn't fully understand. I plan on meeting with Dr. Winters to go over some of those sections so we can flesh out our requirements document.\\ \\
+\textbf{Javier Franco}\\
+This week we worked on our requirements document. Our group also meet up with our client to get their signature, but I was not able to attend the meeting. For the requirements document I felt that I did not contribute my share. I wrote a few non-functional requirements, but they were deleted and put in their correct IEEE format section. I learned that I should not spend too much time thinking about an exact amount for a requirement instead I should choose an arbitrary amount that would make sense and our client will also provide feedback if they disagree with the amount. I also learned that my teammates are much quicker at coming up with things to write about than me and that I need to improve, so that I can contribute my share of the work. I created the Gantt chart that outlines how much time we are going to spend implementing each task for our project and added some glossary terms. Next week we will be finishing our requirements document and we will be working on it over the weekend. \\
 \subsubsection{Week 6}
+\textbf{Shannon Ernst}\\
+This week we updated the requirements document, primarily formatting. We then received a new signature from our client. The Gantt chart was made. Our next steps are to contact the OSU help desk and figure out our infrastructure so that our technical review document can be more accurate. \\ \\
+\textbf{Kyle Nichols}\\
+This week I continued to help revise the requirements document, adding detail to sections and writing the Abstract. This weekend I will start to work with my team on the tech review and design document. I will also do any more research required for the design of our product. \\ \\
+\textbf{Javier Franco}\\
+This week we finished our requirements document and I was able to contribute to some sections which included the overview and scope sections. We were also able to clear up a misinterpretation that our group had about the survey taker mode. Having the majority of the document already finished worked in our favor and I learned that when you write an abstract that your supposed to give the reader an overview of what your document is about, so that they can determine whether or not it suites their needs. Kyle's abstract did what I mentioned and it was well written unlike the one I wrote. I noticed that the online sources that give you a setup for creating an abstract are not helpful because some of the sections do not apply to our document. Next week we will start working on our tech review and design document and possibly investigating where we are planning to store all of the survey and response information. \\
 \subsubsection{Week 7}
+\textbf{Shannon Ernst}\\
+This week we did not really do anything. We divided the tasks to research and have begun researching technical options. The tech reviews will be written over the weekend. We still need to contact OSU to see what resources are available. \\ \\
+\textbf{Kyle Nichols}\\
+This week I met with my team to allocate the tech review tasks and over the weekend will do the research on tools and solutions for the pieces I have been assigned. \\ \\
+\textbf{Javier Franco}\\ 
+This week was a slow week and we assigned each person 3 pieces of the system that they will responsible for. We will be working on our tech review over the weekend and our plan is to have each person's part done by Sunday.\\
 \subsubsection{Week 8}
+\textbf{Shannon Ernst}\\
+This week we finished the technical review. My section was fairly difficult since I know of many great, full technologies which would make us obsolete but due to cost and loss of control of data we can't use them. This means that most of our work will be done from scratch using those technologies as models. This made it difficult for me to find unique things that could be used in our project. I also contacted the OSU Help Desk and Central Services to get information on infrastructure. I'm still waiting to hear back. I ran into our client in the grocery store and was able to discuss future deadlines for the design document. The next step is to get the design document draft to our client by end of Thanksgiving so they have time to review it and provide edits. \\ \\
+\textbf{Kyle Nichols}\\
+Over the weekend I finished the technical review and wrote the abstract for the combined version of all of our group's work.
+
+Our group met and went over the design document and split the product into three basic areas for each group member to be responsible for, the same as the tech review. I will be in charge of managing the database: creating it, administering it, organizing it, and writing the API to interact with it. We got in touch with Oregon State's Information Services desk to request services for STEM Academy. Once I have an idea of what those services will be for STEM Academy, I'll be able to more properly design out the database around those services. \\ \\
+\textbf{Javier Franco}\\
+This week our group finished our tech review document. The parts that I am responsible for include generating reports, saving reports, and printing a report. The parts that I had a difficult time finding technologies for include generating reports and especially saving reports. For generating a report there are nice tools that query a database to create a report of your results, but they have a monthly payment and the other issue is that we might not be able to edit the source code to incorporate the technology. For saving a report it was difficult finding anything that would save just a report instead I kept finding technologies that generated reports, but could also save them. My group suggested to save the reports as a pdf in the database. What it is starting to seem like is that we might end up building most things from scratch. This week we assigned each group member their responsibility for the design document and my responsibility is the design of the reports. In addition, we plan on giving each other feedback on the design document. \\
 \subsubsection{Week 9}
-\subsubsection{Week 10}
+\textbf{Shannon Ernst}\\
+This week was Thanksgiving. The goal of this week is to complete a draft of the design document by Sunday for our client to view Monday and sign Wednesday. Everyone knows what they need to do. On week 10 we will work on the progress report and film to close out the term. \\ \\
+\textbf{Kyle Nichols}\\
+During week 9 I've been working on the design document. My piece of the document is how the database is managed and interacted with. \\ \\
+\textbf{Javier Franco}\\
+For this week I have been working on the design document. The part that was assigned to me was report generation. An issue that I encountered was that I am having a difficult time understanding how to apply a viewpoint and view for the design document. Since we are planning on using AngularJS and JSON my plan is to get familiar using these tools. \\
 \end{document}
 
