--- a/final_report/sections/spring_weekly_blogs.tex
+++ b/final_report/sections/spring_weekly_blogs.tex
@@ -3,11 +3,35 @@
 \begin{document}
 \subsection{Spring}
 \subsubsection{Week 1}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 2}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 3}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 4}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 5}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 6}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 7}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \subsubsection{Week 8}
+\textbf{Shannon Ernst}
+\textbf{Kyle Nichols}
+\textbf{Javier Franco}
 \end{document}
