--- a/final_report/sections/winter_weekly_blogs.tex
+++ b/final_report/sections/winter_weekly_blogs.tex
@@ -3,15 +3,85 @@
 \begin{document}
 \subsection{Winter}
 \subsubsection{Week 1}
+\textbf{Shannon Ernst} \\
+This week I contacted Central Services as we had not heard from them. Our ticket had been lost. They told us that we can work on a LAMP stack and extend the preexisting domain for the STEM Academy. This means that the code would be done in php and mysql. There is nothing inherently wrong with this. We also established a weekly meeting with our client for Tuesday at 9 am. The next steps are creating the website through Central Services. \\ \\
+\textbf{Kyle Nichols}\\ 
+Over Winter Break I set up a prototype of the database on my ONID since we still had not heard back from Central Services, but still needed something to not lose forward momentum.
+
+This week I studied AngularJS to be useful to my team mates.\\ \\
+\textbf{Javier Franco}\\
+This week I looked at creating an alternative design for creating the search form since I thought that my previous design would not work. The new design is based on selecting a question to query first for a survey. Then selecting an operator for the query and specifying a value that is going to be queried through a drop down menu or by manually entering a value. I compared this design idea to Qualtrics and noticed that it uses this set up. I also studied the operators that Qualtrics uses for the different types of questions that a user will be able to create and how it carries out multiple field queries. The plan for next week is to start developing our webpages, so that we can have something to show to the client and I will also be studying more on how to use Angular JS 2 to get a better understanding. \\
 \subsubsection{Week 2}
+\textbf{Shannon Ernst}\\
+This week we met with our client to show a basic mock of what we are doing for the web app. We are going to continue working primarily in html for the moment. Central Services says we can do the LAMP stack which is what we are going to go with. Goals for the coming week is to have a better html frame work so we can illustrate the flow of the program to the client. We will then work on functionality. \\ \\
+\textbf{Kyle Nichols}\\ 
+This week I created the initial setup of our web page and handed it off to the others to create their pages, starting with some basic templates and functionality. Currently, most links go to blank pages, though the page for adding questions and surveys allows for filling in survey text, but cannot save anything or do more than one question.
+
+Our team also met with our client this week to start our weekly meetings and also to update them on what our plan is moving forward. We should them our current progress on the web pages.\\ \\
+\textbf{Javier Franco}\\
+My plan for next week is to create a weekly schedule and to set aside 4-6 hours a day to work on the project to better manage my time and to make progress on the project. This week I watched another tutorial video on Angular 2 and I worked on creating query form page, but encountered errors while trying to query the clubs, camps, and programs for the drop down list. I created three tables for the club, program, and camp that I need to include in Kyle's database. I felt that I was not as productive as I should have been and I will make it up by working on the project over the weekend. \\
 \subsubsection{Week 3}
+\textbf{Shannon Ernst}\\
+This week I started implementing functionality for adding questions to the survey. Over the weekend I'm going to continue working on this as well as implementing preview survey. I need to call Ideal Logic to figure out how to export enrollments. We meet with our client again next week. \\ \\
+\textbf{Kyle Nichols}\\
+This week I updated the database to include a Camp table based on discussing the organization of the database and their needs with the client. Some other modifications have also been made to other tables based on this change or demographic information that was missing.
+
+This weekend and early next week I plan on getting code written to take JSON objects and convert that into a SQL query, as well as create the code to take a SELECT query result and turn it into a useful (probably JSON) object. This will provide the basic functionality for interaction with the database from the rest of the service. \\ \\
+\textbf{Javier Franco}\\
+This week I added some functionality to the report form generation page. The page now allows a user to delete/add a query. I also created the functionality that allows administrative users to login/logout. Some issues that I faced this week was that by not having the appropriate properties on the files and folders it effected the results produced by the .js and .php files which took me a while to figure out. My plan for the weekend is to add more functionality to the page by allowing a user to select a camp and a survey to query. \\
 \subsubsection{Week 4}
+\textbf{Shannon Ernst}\\
+This week I implemented the beginnings of survey creation. I have constructed the json and can generate questions dynamically and create surveys. I still need to be able to recall surveys, save and edit preexisting ones. I still need to call Ideal Logic. We met with our client this week to demo and provide updates. All is going well. \\ \\
+\textbf{Kyle Nichols}\\
+This week I wrote the basic code for adding to the database and selecting from a database. This is currently using hard-coded table entries while Shannon was setting up the JSON creation that I will parse from. \\ \\
+\textbf{Javier Franco}\\
+This week I was able to get the adding a camp page to work and an issue that I encountered was that it was time consuming finding the error that caused it because webpages are hard to debug. Our group met up with the clients and I now have a better understanding of the things they want to be able to query. However, I am worried that it will be difficult to come up with a good design that satisfied their demands for the report generation webpage. For the upcoming week I will be focusing more on the part of the project that I am responsible for and my goals for the week is to complete the query functionality for a survey. \\
 \subsubsection{Week 5}
+\textbf{Shannon Ernst}\\
+This week we contacted central services to get the sub domain. We are working on getting php working for posting json. We sketched a query structure with the client. This coming week we will do the progress report and wrap up alpha with successful php posts. \\ \\
+\textbf{Kyle Nichols}\\
+On Sunday, I worked with my group to make some progress on creating interaction between survey generation and adding those surveys to a database. I have the basic outline code written, but we ran into a problem where POST data was coming back empty in the PHP code. So far we have not found what has caused this issue, but this weekend I will be looking into this problem more as well as revising and working on documentation. \\ \\
+\textbf{Javier Franco}\\
+This week our group met up with the client and they gave me feedback on my report generation design. I am going to have to change my design in order to meet their requests of the stuff they want to be able to query. The plans for the upcoming week are to create the demo video, make revisions on our documents, make a progress report, and also work on the capstone project. For the upcoming week I am worried that I will not have time to work on the capstone project since we have to make revisions to our documents, make a progress report, and a demo video. I will also be having a midterm for Linear Algebra that I need to study for. \\
 \subsubsection{Week 6}
+\textbf{Shannon Ernst}\\ 
+This week we focused on the progress report. I established the One Note Notebook, read and edited our previous documents, and assisted in the revision process. I registered our team for expo as team captain. I worked on debugging the sending the json issue for saving the survey. After the progress report is done we will return to code development where we need to add some UI functionality and start testing.\\ \\
+\textbf{Kyle Nichols}\\
+This week I worked primarily on documentation. Shannon and I met on Tuesday to try and figure out a bug with receiving JSON through POST, which PHP was trying to parse and was being given empty objects/strings. I found a temporary fix with using a .json file.
+
+For documentation, I revised my portions of the design document and technical review. I also made some general fixes to other documents. \\ \\
+\textbf{Javier Franco}\\ \\
 \subsubsection{Week 7}
+\textbf{Shannon Ernst}\\
+This week I fixed the json bug that we were having issues with. The issue was in inserting into the database. The query and parameters for the query were not set up correctly. Additionally, json decode in php was not being used correctly either. We now have a nice template for collect json and parsing it to put into our database. We can now move ahead with developing that functionality. I also implemented the matrix question which will require a lot of css to make it look good but it is completely function. Remove question was also implemented. We are reconsidering how to save questions we want to reuse. An option for this would be allowing a check box on the questions that should be considered frequent questions to indicate they should be stored in a separate table. This would allow us to then give the option of adding frequent questions. We also need to develop loading a survey that has been saved. \\ \\
+\textbf{Kyle Nichols}\\
+This week, once Shannon had fixed the bug with the JSON POST, I started back on writing the code to parse the JSON for information to insert to the database. Shannon was able to get insertion into the database on her end. I couldn't quite replicate this due to an issue with file paths in my public html/ directory when I used her code, but this is not a pressing issue once we have this on one website
+
+I have written the code to parse the Surveys and Questions. \\ \\
+\textbf{Javier Franco}\\ 
+This week I was able to store a JSON of a report which will help me with implementing the editing and saving of a report generated by an admin user. For the upcoming week I will be working on getting the questions from a survey, so that they are displayed on the drop down menu for a query template which will allow me to get started with creating the query part for the report generation web page. An issue that I faced this week while implementing the display of drop down menu survey questions was that I was able to get the ID of the survey to query to get the questions, but I ended generating a new page with the survey ID displayed which is not what I want.\\
 \subsubsection{Week 8}
+\textbf{Shannon Ernst}\\
+This week I contacted Central Services again. They had lost our ticket, again. They came back and said that the hosting will cost 20 dollars a month which is not what they said originally. I also contacted Ideal Logic and they will only work with account owners. Kyle and I worked on adding camps via the survey drop down. We also fixed the save issues with editing and creating a survey. We still have some small functionality to add but mostly we need to start working on css and tackling our hosting issues. \\ \\
+\textbf{Kyle Nichols}\\
+This week I did not do many things individually. However, I worked with Shannon to implement the drop-down of Camps in the Survey generation and fixed some still occuring issues with the saving of survey information. \\ \\
+\textbf{Javier Franco}\\
+This week I was able to get the dropdown for displaying the questions for the query template to work properly. I was also able to display the responses for the selected question, but there is a small issue. The issue that needs to be resolved is that it takes sometimes multiple clicks on the dropdown in order to display the selected questions responses. By having the dropdowns for displaying a surveys questions and a selected questions responses we will now be able to work on the querying part of the report generation page. For this weekend I plan on finishing the editing of a report and for the upcoming week I will begin working on the querying part of the project and hopefully have it done before the beta release. \\
 \subsubsection{Week 9}
+\textbf{Shannon Ernst}\\
+I was away in Seattle at a conference. My contributions this week were minimal and centered around working with Central Services on hosting. \\ \\
+\textbf{Kyle Nichols}\\
+This week we implemented adding students to the database through Enrollment. On the add camp page, a CSV file can be uploaded and student names are parsed from there for storage in the Responder table. In addition, the Camp table is now updated with the pre or post survey ID when the Camp is selected in survey generation. \\ \\
+\textbf{Javier Franco}\\
+This week I worked on adding more functionality to the report generation page. I created a print button that prints the report generated by an admin without displaying the input fields, but the input fields cut off long text. This should be an easy fix by making the input fields wider in the css style sheet or checking if it is possible to add a constraint to the number of characters that can be entered. I also started implementing the flow for editing a report. For the upcoming week I continue working on editing a report and also on query information. If we have not gotten the part of the project that lets a student take a survey and store their results into the database. I will create my own json of students survey results, so that I can begin working on querying information. \\
 \subsubsection{Week 10}
+\textbf{Shannon Ernst}\\ \\ \\
+\textbf{Kyle Nichols}\\
+This week I worked on creating the poster, writing the pieces on my involvement in the project and about me.
+
+On the implementation of our project, I updated the database's Question table to just contain the ID, the type, and to store information on the question, created an obj string to store a string representation of the JSON object for questions. This will more easily store the questions and answers for all three types, as their structure is variable. \\ \\
+\textbf{Javier Franco}\\
+This week I was unable to work on our capstone project due to having two finals in week 10 this included WR327 and CS496. For WR 327 I worked on a progress report with my group and I also attended multiple meetings for practicing our presentation for our final. For CS 496 I had to make a mobile app for our final project that incorporated different things that we learned throughout the term. This project took a lot of time due to debugging problems and I also focused on completing it because it is worth 30% of my overall grade. For the upcoming week I plan on attending the meeting with the client on Monday and I'll work on the capstone project when I can. When spring break arrives I will focus on completing our capstone project by spending most of my time working on it. \\
 \end{document}
 
 
