--- a/user_guide.tex
+++ b/user_guide.tex
@@ -51,11 +51,11 @@ Entering these and clicking "submit" will bring an admin to the main admin page 
  and password combination is successfully authorized. Also on the login page are the "Reset" button,
  which clears the input fields, and an "Exit" button that returns the user to the front page.
 \subsection{Main Admin Page}
-% TODO
+The main page displays a list of options that an admin can choose from which include adding a new admin, deleting an existing admin, adding a new camp, edit/create a survey, edit/create a report, and logging out. If an admin clicks on one of the options they will be redirecte to its correspoding webpage. 
 \subsection{Add Admin}
-% TODO
+The only admin accounts that are allowed to create new admins are Catherine Law and Carole Rodriguez. To create a new admin enter their first name, last name, user name, and password into the corresponding input fields. Then click the "Submit" button. If Carole or Catherine admin accounts clicked the "Submit" button they will received a pop up message that will say that they have succesfully created a new admin. Any other admin account that clicks the "Submit" button will receive an error message that tells them that they are not allowed to create new admins. To return to the Main Admin Page click the "Exit" button. 
 \subsection{Delete Admin}
-% TODO
+The only admin accounts that are allowed to delete admins are Catherine Law and Carole Rodriguez any other admins that try to delete an admin will have no effect. Both of their accounts cannot be deleted by anybody including themselves. This will prevent deleting all the admin accounts. If all the admin accounts were to be deleted it will render the web application useless since there are no admin accounts that can log in. To delete an admin enter their first name, last name, and user name into the corresponding input fields. Then click the "Submit" button. To return to the Main Admin Page click the "Exit" button. 
 \subsection{Add Camp}
 % TODO
 \subsection{Edit/create a Survey}
@@ -77,9 +77,27 @@ load a preexisting one. To load a preexisting survey, select a survey from the "
  the page. To exit the survey click the "Exit" button. To pring the survey, click the "Print" button. This will take 
  you to a standard print dialog box. 
 \subsection{Edit/create a Report}
-% TODO
-\subsection{Log Out}
+The Edit/create a Report option redirects the admin to a new page that gives the admin two options to choose from. The first option is to create a new report by clicking the "Submit" button. The second option is to edit a report by first selecting the name of the report from a drop down menu and then clicking the "Submit" button below the drop down menu. This will redirect you to the edit report page and it will display the results of the saved report that you selected. 
+ If an admin decides that they no longer want to edit/create a new report they can click the "Exit" button to return to the Main Admin Page. 
+\subsubsection{Create New Report} 
+To create a new report follow the following steps:
+1. Select the name of the camp from the drop down menu.
 
+2. Select the name of the survey from the drop down menu that you would like to generate a report for. There should be 3 options a pre-survey, post-survey, and "Both". The option "Both" is used solely for finding the the change in reponse for matrix questions from a pre-survey to a post-survey. If an admin did not create a pre-survey and a post-survey the drop down menu will be empty. 
+
+3. Select the query type that you would like use by clicking on its corresponding radio button. 
+The two types of queries include multiple choice and matrix and text questions. 
+Then click the "Add Query" button which will create the query template based on your selection below the text that says "Queries will appear hear:".  If a query template for a multiple choice question was created first select the multiple choice question that you want a query result for from the 1st drop down menu then select one of the corresponding responses from the 2nd drop down menu. If a query template for a multple choice and matrix question was created select the question you want a query result for from the drop down menu. If you no longer need a query template you can delete it by clicking on its corresponding delete button indicated by "-" symbol. You can also delete all of the query templates currently displayed on the webpage by clicking the "Reset" button. If you want to create additional queries go back to step . 
+
+4. Select the result type that you would like to be returned this includes a count and percentage by clicking on their corresponding radio button. This will return the result type that you selected for a matrix and multiple choice question.
+
+5. Select the demographic information from the drop down menus to filter your returned query result. This includes gender, parent's highest education, student race, student ethnicity, and free or reduced lunch. 
+
+6. Once everything has been setup click the "Submit" button. This will return a query result for each query template. The query result for a multiple choice question will return two input boxes. The first input box contains the multiple choice question that was selected and next to it is a delete button for removing the query result indicated by a "-" symbol.  The result for a matrix or text question will return a table along with a delete button indicated by a "-" symbol. The table for a matrix question return a breakdown of the results for each sub question and the table for a text questions returns the name of each student along with their response. 
+
+7. When an admin has finished generating the query results for their report they can print their results by clicking the "Print" button. They can also save their report by clicking the "Save" button. Furthermore, they can return to the Main Admin Page by clicking the "Print" button. 
+\subsection{Log Out}
+When an admin clicks the Log Out option they will be redirected to the login page. 
 \section{Student View}
 After clicking the button to enter the student view, a student will be brought to a page with two drop down menus.
 The first menu allows them to select their camp.
@@ -97,5 +115,24 @@ The following information is provided in case STEM Academy encounters a bug in u
 Unfortunately, software cannot be bug-free, but we hope the information provided in this section will help users recover
  from and resolve bugs that may impair use of the software.
 % TODO
+\subsubsection{Create New Report} 
+To create a new report follow the following steps:
+1. Select the name of the camp from the drop down menu.
+
+2. Select the name of the survey from the drop down menu that you would like to generate a report for. There should be 3 options a pre-survey, post-survey, and "Both". The option "Both" is used solely for finding the the change in reponse for matrix questions from a pre-survey to a post-survey. If an admin did not create a pre-survey and a post-survey the drop down menu will be empty. 
+
+3. Select the query type that you would like use by clicking on its corresponding radio button. 
+The two types of queries include multiple choice and matrix and text questions. 
+Then click the "Add Query" button which will create the query template based on your selection below the text that says "Queries will appear hear:".  If a query template for a multiple choice question was created first select the multiple choice question that you want a query result for from the 1st drop down menu then select one of the corresponding responses from the 2nd drop down menu. If a query template for a multple choice and matrix question was created select the question you want a query result for from the drop down menu. If you no longer need a query template you can delete it by clicking on its corresponding delete button indicated by "-" symbol. You can also delete all of the query templates currently displayed on the webpage by clicking the "Reset" button. If you want to create additional queries go back to step . 
+
+4. Select the result type that you would like to be returned this includes a count and percentage by clicking on their corresponding radio button. This will return the result type that you selected for a matrix and multiple choice question.
+
+5. Select the demographic information from the drop down menus to filter your returned query result. This includes gender, parent's highest education, student race, student ethnicity, and free or reduced lunch. 
+
+6. Once everything has been setup click the "Submit" button. This will return a query result for each query template. The query result for a multiple choice question will return two input boxes. The first input box contains the multiple choice question that was selected and next to it is a delete button for removing the query result indicated by a "-" symbol.  The result for a matrix or text question will return a table along with a delete button indicated by a "-" symbol. The table for a matrix question return a breakdown of the results for each sub question and the table for a text questions returns the name of each student along with their response. 
+
+7. When an admin has finished generating the query results for their report they can print their results by clicking the "Print" button. They can also save their report by clicking the "Save" button. Furthermore, they can return to the Main Admin Page by clicking the "Print" button. 
+
+
 
 \end{document}
